--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,361 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 55.5%;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+}
+
+:root {
+  --main-color: #333;
+  --primary-color: #acacac;
+  --icon-color: #525252;
+}
+
+i {
+  width: 2rem;
+  height: 2rem;
+}
+
+.fa,
+.fas {
+  font-weight: 900;
+  display: grid;
+  place-items: center;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.heading_style {
+  padding: 20px 0;
+  text-align: center;
+  letter-spacing: 2px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  background-color: rgb(244, 244, 244);
+  box-shadow: 0 2px 6px 0 rgba(31, 38, 135, 0.37);
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+}
+
+.cart-section .heading {
+  font-size: 3rem;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--main-color);
+  margin-bottom: 4rem;
+}
+
+.heading-count {
+  font-weight: bold;
+  color: var(--main-color);
+}
+
+.cart-section {
+  margin: auto;
+  padding: 1rem 1rem;
+}
+.cart-section .cart-items {
+  width: 100%;
+  margin: auto;
+  padding: 0 2rem;
+  display: grid;
+  place-items: center;
+}
+
+.cart-items hr {
+  margin: 2rem auto;
+}
+
+.bill hr {
+  margin: 1rem auto;
+  margin-right: 2rem;
+  width: 20%;
+}
+.items-container {
+  width: 90%;
+}
+
+.items-info {
+  width: 100%;
+  height: 11rem;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.items-info .image img {
+  width: 13rem;
+  height: 12rem;
+  filter: drop-shadow(0rem 0.4rem 1rem #dadcdf);
+  border-radius: 3.5rem;
+}
+
+.items-info .title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.items-info .title h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.2rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: var(--main-color);
+}
+
+.items-info .title p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  text-align: left;
+  color: var(--primary-color);
+}
+
+.quantity {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.quantity button {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.quantity input {
+  width: 6rem;
+  height: 3rem;
+  border: 0.141rem solid var(--primary-color);
+  box-sizing: border-box;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.6rem;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--primary-color);
+  margin: 0 1rem;
+  border-radius: 0.5rem;
+  outline: none;
+  background-color: transparent;
+}
+
+.quantity input:focus {
+  outline: none;
+}
+
+.price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.price h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--main-color);
+}
+
+.delete-item {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 5rem;
+}
+
+.re {
+  color: black;
+}
+
+.delete-item button {
+  border: none;
+  background-color: transparent;
+}
+
+.bill {
+  width: 95%;
+  margin-top: 4rem;
+  text-align: right;
+}
+
+.bill h3 {
+  font-style: 200;
+  font-size: 2.5rem;
+  margin-right: 2rem;
+  line-height: 3.2rem;
+  color: var(--main-color);
+}
+
+.bill h3 span {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.8rem;
+  line-height: 3.2rem;
+  color: black;
+}
+
+.bill button {
+  border: none;
+  font-size: 2rem;
+  padding: 2rem 4rem;
+  color: #fff;
+  background-color: black;
+  text-transform: uppercase;
+  margin-top: 3rem;
+  margin-right: 2rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  letter-spacing: 1px;
+}
+
+/* hover effects  */
+
+.fa-trash-alt,
+.fa-plus:hover,
+.fa-minus:hover {
+  color: rgb(255, 0, 0);
+}
+
+.fa-plus,
+.fa-minus {
+  color: var(--icon-color);
+}
+
+.bill button:hover {
+  color: black;
+  font-weight: bold;
+  background-color: #fff;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+/* responsive media queries  */
+
+@media (max-width: 968px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .cart-section .cart-items {
+    padding: 0;
+  }
+
+  .items-info {
+    width: 100%;
+    height: auto;
+    margin: 1rem 0.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .items-info .image img {
+    width: 7rem;
+    height: 4rem;
+    margin: 1rem auto;
+  }
+  .items-info .title h2 {
+    font-size: 1.2rem;
+  }
+
+  .items-info .title p {
+    font-size: 1rem;
+  }
+
+  .cart-items hr {
+    margin: 0.2rem auto;
+  }
+
+  .quantity input {
+    width: 3rem;
+    height: 1.5rem;
+    font-size: 1rem;
+    margin: 0 0.2rem;
+  }
+
+  .price h3 {
+    font-size: 1rem;
+  }
+
+  .title,
+  .quantity,
+  .price,
+  .delete-item {
+    padding-left: 3rem;
+    align-items: center;
+  }
+
+  .items-info .image {
+    margin-bottom: 0.7rem;
+  }
+
+  .quantity {
+    margin: 2rem 0 2rem 0;
+    justify-content: flex-start;
+  }
+
+  .price {
+    justify-content: flex-start;
+  }
+
+  .re {
+    display: none;
+  }
+
+  .delete-item {
+    margin-right: 2rem;
+    justify-content: flex-start;
+  }
+
+  .bill {
+    margin-bottom: 2rem;
+    letter-spacing: 2px;
+    text-align: end;
+  }
+  .bill h3 {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    margin-right: 1rem;
+  }
+
+  .bill h3 span {
+    font-size: 1.5rem;
+  }
+  .bill hr {
+    width: 40%;
+    margin: 1rem auto;
+  margin-right: 1rem;
+  }
+
+  .bill button {
+    margin-bottom: 3rem;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    padding: 2rem 3rem;
+    margin-top: 1rem;
+  }
 }
